--- a/css/style.css
+++ b/css/style.css
@@ -580,14 +580,21 @@ img {
   -ms-flex: 1 0 auto;
   -webkit-box-flex: 1;
           flex: 1 0 auto;
-  -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  -webkit-justify-content: flex-end;
-  -moz-justify-content: flex-end;
-  justify-content: flex-end;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  justify-content: center;
   -webkit-flex-flow: row wrap;
   -ms-flex-flow: row wrap;
   flex-flow: row wrap; }
+  @media (min-width: 380px) {
+    .site-header .menu {
+      -webkit-box-pack: end;
+      -ms-flex-pack: end;
+      -webkit-justify-content: flex-end;
+      -moz-justify-content: flex-end;
+      justify-content: flex-end; } }
 
 .site-footer .wrap {
   display: -webkit-box;
